1.6.1
-----

- fix issue119: {envsitepackagesdir} is now correctly computed and has
  a better test to prevent regression.

- fix issue116: make 1.6 introduced behaviour of changing to a 
  per-env HOME directory during install activities dependent 
  on "--set-home" for now.  Should re-establish the old behaviour
  when no option is given.

1.6.0
-----------------

- fix issue35: add new EXPERIMENTAL "install_command" testenv-option to
  configure the installation command with options for dep/pkg install.
  Thanks Carl Meyer for the PR and docs.

- fix issue91: python2.5 support by vendoring the virtualenv-1.9.1 
  script and forcing pip<1.4. Also the default [py25] environment 
  modifies the default installer_command (new config option)
  to use pip without the "--pre" option which was introduced 
  with pip-1.4 and is now required if you want to install non-stable 
  releases.  (tox defaults to install with "--pre" everywhere).

- during installation of dependencies HOME is now set to a pseudo
  location ({envtmpdir}/pseudo-home).  If an index url was specified
  a .pydistutils.cfg file will be written with an index_url setting
  so that packages defining ``setup_requires`` dependencies will not
  silently use your HOME-directory settings or https://pypi.python.org.

- fix issue1: empty setup files are properly detected, thanks Anthon van
  der Neuth

- remove toxbootstrap.py for now because it is broken.

- fix issue109 and fix issue111: multiple "-e" options are now combined
  (previously the last one would win). Thanks Anthon van der Neut.

- add --result-json option to write out detailed per-venv information
  into a json report file to be used by upstream tools.

- add new config options ``usedevelop`` and ``skipsdist`` as well as a
  command line option ``--develop`` to install the package-under-test in develop mode.
  thanks Monty Tailor for the PR.

- always unset PYTHONDONTWRITEBYTE because newer setuptools doesn't like it
